--- a/src/language/hu.json
+++ b/src/language/hu.json
@@ -3,5 +3,6 @@
   "race": "Futam",
   "sprintQualify": "Sprint Kvalifikáció",
   "sprint_qualify": "Sprint Kvalifikáció",
-  "calendar": "Naptár"
+  "calendar": "Naptár",
+  "betChampionship": "Tipp Bajnokság"
 }
